--- a/package.json
+++ b/package.json
@@ -1,19 +1,49 @@
 {
-  "name": "motivatr-api",
+  "name": "motivatr",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon ./server.js",
+    "test": "mocha --exit"
   },
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bson": "^2.0.4",
     "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
+    "chai-http": "^3.0.0",
+    "chia": "0.0.1",
+    "cors": "^2.8.4",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.3",
-    "mocha": "^5.1.1",
-    "mongoose": "^5.0.17"
-  }
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
+    "faker": "^4.1.0",
+    "html": "^1.0.0",
+    "jsonwebtoken": "^8.2.0",
+    "method-override": "^2.3.10",
+    "methods": "^1.1.2",
+    "mocha": "^5.0.5",
+    "mongo": "^0.1.0",
+    "mongodb": "^3.0.5",
+    "mongoose": "^5.0.12",
+    "mongoose-unique-validator": "^2.0.0",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-fitbit-oauth2": "^1.0.2",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "querystring": "^0.2.0",
+    "routes": "^2.1.0",
+    "session": "^0.1.0",
+    "taucharts": "^2.1.0"
+  },
+  "keywords": [
+    "node",
+    "hyperdev",
+    "express"
+  ]
 }
