--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "bson": "^2.0.4",
     "chai": "^4.1.2",
@@ -23,7 +24,7 @@
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "html": "^1.0.0",
-    "jsonwebtoken": "^8.2.0",
+    "jsonwebtoken": "^8.2.1",
     "method-override": "^2.3.10",
     "methods": "^1.1.2",
     "mocha": "^5.0.5",
@@ -34,9 +35,11 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-fitbit-oauth2": "^1.0.2",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "querystring": "^0.2.0",
+    "redux-thunk": "^2.2.0",
     "routes": "^2.1.0",
     "session": "^0.1.0",
     "taucharts": "^2.1.0"
